Cleanup gulp tasks. Reduce viewer_index to index

--- a/view_containers/viewer.html
+++ b/view_containers/viewer.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <div id="content"></div>
-    <script type="text/javascript" src="../bundle/viewer_index.js"></script>
+    <script type="text/javascript" src="../bundle/index.js"></script>
 </body>
 </html>
