--- a/view_containers/viewer.html
+++ b/view_containers/viewer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
-<body>
+<body style="margin: 0;">
     <div id="content"></div>
     <script type="text/javascript" src="../bundle/index.js"></script>
 </body>
