Navigation between views is handled in JS DOM rendering vs. new HTTP request

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body style="margin: 0;">
     <div id="content"></div>
     <div id="scripts"></div>
-    <script type="text/javascript" src="../bundle/index.js"></script>
+    <script type="text/javascript" src="bundle/index.js"></script>
 </body>
 </html>
